# regex-symb

./: Check.hs  SORE.hs  SymbolicRE.hs  regex-sore.cabal  regex-symb.cabal
Text/Regex/Symbolic/: Solver.hs
test/: Benchmark.hs  gen.py
